--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -91,13 +91,14 @@ pre {
 .scenario-name::after {
   position: absolute;
   top: -0.5em;
-  right: 0;
+  left: -0.2em;
   content: "\2304";
   font-size: 1.8em;
 }
 
 .collapse .scenario-name::after {
   top: -0.25em;
+  left: -0.5em;
   transform: rotate(270deg);
   -moz-transform: rotate(270deg);
   -webkit-transform: rotate(270deg);
@@ -111,7 +112,7 @@ pre {
 
 .collapse .scenario-name:hover::after {
   top: -0.25em;
-  right: -0.05em;
+  left: -0.45em;
 }
 
 /*FEATURE CONTENT*/
@@ -321,7 +322,7 @@ pre {
   font-weight: bold;
   word-break: break-word;
   padding-bottom: 0.5em;
-  padding-right: 1.6em;
+  padding-left: 1.2em;
   position: relative;
 }
 
