--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -94,16 +94,17 @@ pre {
   left: -0.2em;
   content: "\2304";
   font-size: 1.8em;
+  transition: all 0.2s linear;
 }
 
 .collapse .scenario-name::after {
   top: -0.25em;
   left: -0.5em;
-  transform: rotate(270deg);
-  -moz-transform: rotate(270deg);
-  -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  -o-transform: rotate(270deg);
+  transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
 }
 
 .scenario-name:hover::after {
