Fix download margin
Another element caused JS function not work properly.
To be fixed.

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -378,6 +378,10 @@ pre, pre * {
   margin-top: 15px;
 }
 
+.margin-bottom {
+  margin-bottom: 15px;
+}
+
 .step-status {
   display: none;
   padding: 0 1rem 0 0;
