Cleanup of class link - no longer needed

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -512,12 +512,12 @@ a {
   text-decoration: none;
 }
 
-.link a span:hover {
+a:hover {
   text-decoration: underline;
   text-decoration-color: var(--strong-color);
 }
 
-.link.contrast a span:hover {
+.contrast a:hover {
   color: grey;
   text-decoration: underline;
   text-decoration-color: grey;
