Make sure embed buttons are not clickable outside the arrow and text

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -435,6 +435,7 @@ pre * {
   text-decoration: underline;
   color: var(--strong-color);
   font-size: 12px;
+  width: max-content;
 }
 
 .embed_button.contrast {
