remove padding-right on scenario-capsule while on small display

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -609,4 +609,9 @@ a:hover {
   .feature-summary-stats {
     margin-left: 0.2rem;
   }
+
+  .scenario-capsule {
+    padding-right: 0rem;
+  }
+
 }
