--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -179,6 +179,10 @@ pre * {
   font-size: 0.8rem;
 }
 
+.feature-summary-container.collapse {
+  display: none;
+}
+
 .feature-summary-container.contrast {
   background-color: #000;
   color: rgb(248, 248, 248);
@@ -432,6 +436,10 @@ pre * {
   word-wrap: break-word;
   font-size: 12px;
   margin: 0.5rem;
+}
+
+.embed_content.collapse {
+  display: none;
 }
 
 .embed_button {
