Improvements to the feature started data
Release 1.9.1: hotfix invalid minified JS

The following code
```
}
else {
```
is being minified to invalid JS:
```
};else{
```
We should investigate why and maybe add
some check or use different minifier.

Bump version, add changes entry

Release 1.9.1: hotfix invalid minified JS

The following code
```
}
else {
```
is being minified to invalid JS:
```
};else{
```
We should investigate why and maybe add
some check or use different minifier.

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -254,6 +254,18 @@ pre * {
   margin-bottom: 2rem;
 }
 
+.feature-started {
+  align-self: center;
+  margin-left: auto;
+  font-size: 0.75rem;
+  font-style: italic;
+}
+
+.feature-started.contrast {
+  font-size: 1.25rem;
+  color: #fff;
+}
+
 
 /*SCENARIO CONTENT*/
 .scenario-capsule {
@@ -599,6 +611,10 @@ a:hover {
 @media only screen and (max-width: 750px) {
   .feature-title {
     flex-direction: column;
+  }
+
+  .feature-started {
+    margin-left: unset;
   }
 
   .feature-summary-container {
