Support new collapse setting in ini conf file
Closes #51

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -498,6 +498,10 @@ table tbody tr:nth-child(even) {
   background-color: var(--table-bg-even);
 }
 
+table tbody.collapse {
+  display: none;
+}
+
 table.contrast tbody tr {
   background-color: #fff;
   color: #000;
