--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -131,8 +131,17 @@ pre * {
   align-items: center;
   background-color: var(--feature-bg);
   color: var(--feature-color);
-  padding: 0.5em 1rem;
+  padding: 0.5em 1em;
   margin-bottom: 5px;
+}
+
+.feature-title:not(:first-child) {
+  margin-top: 1em;
+}
+
+.global-summary {
+  color: var(--strong-color);
+  margin-bottom: 0px;
 }
 
 .feature-icon {
@@ -298,24 +307,25 @@ pre * {
   background-color: var(--feature-bg);
 }
 
-.scenario-header.passed {
+.scenario-header.passed, .global-summary.passed {
   background-color: var(--passed-step-bg);
 }
 
-.scenario-header.failed {
+.scenario-header.failed, .global-summary.failed {
   background-color: var(--failed-step-bg);
 }
 
-.scenario-header.undefined {
+.scenario-header.undefined, .global-summary.undefined {
   background-color: var(--undefined-step-bg);
 }
 
-.scenario-header.skipped {
+.scenario-header.skipped, .global-summary.skipped {
   background-color: var(--skipped-step-bg);
 }
 
 .scenario-header.contrast,
-.scenario-capsule.contrast {
+.scenario-capsule.contrast,
+.global-summary.contrast {
   background-color: #000;
   color: #fff;
 }
@@ -552,6 +562,7 @@ a:hover {
 
 /* BUTTONS andHELPER classes */
 /* Should be at bottom, to override rules above */
+
 .button {
   display: inline-block;
   color: var(--button-color);
