--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -247,7 +247,7 @@ pre * {
   color: var(--summary-skipped);
 }
 
-.global-summary-status.contrast {
+.contrast .global-summary-status {
   color: rgb(248, 248, 248);
 }
 
