Since there is a containing layer for filtering, the filter container will have the first-child query for margin top

--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -124,6 +124,10 @@ pre * {
 
 /*FEATURE CONTENT*/
 
+.feature-filter-container:not(:first-child) {
+  margin-top: 1em;
+}
+
 .feature-title, .global-summary {
   font-size: 1rem;
   display: flex;
