--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -76,7 +76,7 @@
 
 html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif, Arial, Helvetica;
   font-size: 1rem;
   margin: 0;
   padding: 0;
